@@ -199,6 +199,9 @@ Release 2.7.2 - UNRELEASED
     HDFS-8384. Allow NN to startup if there are files having a lease but are not
     under construction. (jing9)
 
+    HDFS-9178. Slow datanode I/O can cause a wrong node to be marked bad.
+    (Kihwal Lee)
+
 Release 2.7.1 - 2015-07-06
 
   INCOMPATIBLE CHANGES
